--- a/catalog/view/theme/default/address.html
+++ b/catalog/view/theme/default/address.html
@@ -232,6 +232,7 @@
 					</ol>
 					
 					<div class="text clearfix">
+						  <div class="shipping_address" id="shipping_address">
 						<h2>Select the shipping address</h2>
 						<ul class="address_ul clearfix">
 							<li class="active clearfix">
@@ -266,7 +267,8 @@
 							</li>
 						</ul>
 						<a class="add_a" href="###">Add new address</a>
-						
+						</div>
+						 <div class="shipping_address" id="shipping_address">
 						<h3>Shipping Method</h3>
 						<ul class="express_ul">
 							<li class="clearfix">
@@ -327,10 +329,15 @@
 						</ul>
 						
 					</div>
+					</div>
+					
+					</div>
 					
 				</div>
 			
 				<div class="right clearfix">
+					   <div class="payment_next" id="payment_next" >
+					 <div class="collapse-checkout" id='collapse-checkout-confirm'>
 					<h2>SUMMARY</h2>
 					<ul class="cart_ul">
 						<li class="clearfix">
@@ -397,6 +404,7 @@
 					<div class="btn">
 						<a class="a_btn" href="###">GO TO CHECK OUT&nbsp;&nbsp;&nbsp;></a>
 					</div>
+				</div>
 				</div>
 			
 			</div>
