--- a/catalog/view/theme/default/company.html
+++ b/catalog/view/theme/default/company.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="css/index.css" />
 		<script type="text/javascript" src="js/jquery.min.js" ></script>
 		<script type="text/javascript" src="js/common.js" ></script>
-		<title>SHOPCART2</title>
+		<title>COMPANY</title>
 	</head>
 	<body>
 		<!--头部-->
@@ -205,138 +205,218 @@
 		
 		</div>
 		<!--内容-->
-		<div class="shopcart2 clearfix">
-			<div class="content in_content shop2_content clearfix">
-				<div class="top clearfix">
-					<h1>SHOPPING CART</h1>
-					<a href="###">Continue Shopping</a>
-				</div>
-				
-				<div class="shop2_text clearfix">
-					<div class="left">
-						<label for="" class="qx_label">
-							<span>ALL</span>
-							<input class="check_input" type="checkbox" />
-							<i class="check_i"></i>
-						</label>
-						<ul class="shop2_ul">
-							<li class="clearfix">
-								<label for="" class="dx_label">
-									<input class="check_input"  type="checkbox" />
-									<i class="check_i"></i>
-								</label>
-								<div class="pic_img">
-									<a href="###"><img src="img/jpg/pro_det1.jpg" alt="" /></a>
+		<div class="in_content company">
+			<!--banner-->
+			<div class="ny_bar" style="background: url(img/jpg/ny_bar1.png) no-repeat ;background-size: cover;height: 31.25vw;"></div>
+			
+			<div class="com_content">
+				<div class="com_text">
+					
+					<div class="text_1 clearfix">
+						<div class="top">
+							<hr class="com_hr" />
+							<span class="com_span"><i>01</i></span>
+							<h1 class="com_h1">WHO WE ARE</h1>
+							<p class="com_p">
+								Hot Beauty Hair is a remarkable human hair supplier in China, providing best virgin human hair
+								 with wholesale factory price. We specialize in best one donor </br>
+								Brazilian hair, Peruvian Hair, Indian Hair and Luxury Funmi Hair.</br>
+								We have own our production designing and developing team in factory.
+							</p>
+						</div>
+						
+						<img class="fl" src="img/jpg/com_1.jpg" alt="" />
+						<img class="fr" src="img/jpg/com_2.jpg" alt="" />
+					</div>
+					
+					<div class="text_2 clearfix">
+						<div class="top">
+							<hr class="com_hr" />
+							<span class="com_span"><i>02</i></span>
+							<h1 class="com_h1">WHAT YOU CAN GET FORM USE</h1>
+						</div>
+						
+						<ul class="clearfix">
+							<li>
+								<span>01</span>
+								<div class="right">
+									<h2>Best quality human hair</h2>
+									<p>
+										Hot beauty hair can always last </br>
+										2-5 years, dye-able,minimum  </br>
+										shedding and tangle free.
+									</p>
 								</div>
-								<div class="text">
-									<a class="a_bt" href="###">Fuller Peruvian Virgin Hair  Body Wavy   </a>
-									<p><span>Color:</span> Natural Black</p>
-									<p><span>Length:</span> 12inch</p>
-									<p><span>Commodity code:</span> xhs00245</p>
-								</div>
-								<div class="price clearfix">
-									<p>$35.65<span>$35.65</span></p>
-								</div>
-								<div class="pre_div">
-									<div class="num_div">
-										<span class="sub"></span>
-										<input class="num" type="text" value="1" />
-										<span class="add"></span>
-									</div>
-								</div>
-								<div class="close"></div>
-								<span class="wishlist">Move to Wishlist</span>
 							</li>
-							<li class="clearfix">
-								<label for="" class="dx_label">
-									<input class="check_input"  type="checkbox" />
-									<i class="check_i"></i>
-								</label>
-								<div class="pic_img">
-									<a href="###"><img src="img/jpg/pro_det1.jpg" alt="" /></a>
+							<li>
+								<span>02</span>
+								<div class="right">
+									<h2>Factory wholesale pricer</h2>
+									<p>
+										
+										We collect raw material from remote  </br>
+										Asia countries and produce by </br>
+										ourselves just for saving your cost.
+									</p>
 								</div>
-								<div class="text">
-									<a class="a_bt" href="###">Fuller Peruvian Virgin Hair  Body Wavy   </a>
-									<p><span>Color:</span> Natural Black</p>
-									<p><span>Length:</span> 12inch</p>
-									<p><span>Commodity code:</span> xhs00245</p>
+							</li>
+							<li>
+								<span>03</span>
+								<div class="right">
+									<h2>
+										Professional quality-check team  </br>
+										& warehouse packing team
+									</h2>
+									<p>
+										We have 7 steps quality checking in  </br>
+										factory and 3 steps checking in  </br>
+										warehouse, ensured each single  </br>
+										bundle is the best  </br>
+										status before we present you.
+									</p>
 								</div>
-								<div class="price clearfix">
-									<p>$35.65<span>$35.65</span></p>
+							</li>
+							<li>
+								<span>04</span>
+								<div class="right">
+									<h2>Custom Order</h2>
+									<p>
+										Custom order is one of our speciality. </br>
+										We can make you a custom wig with </br>
+										your selected length, textures and Hair weft </br>
+										with regular color made in 24-48 hours in our </br>
+										work shop.For special color weft hair, we </br>
+										can do it in several days or in 1 to 2 weeks.
+
+									</p>
 								</div>
-								<div class="pre_div">
-									<div class="num_div">
-										<span class="sub"></span>
-										<input class="num" type="text" value="1" />
-										<span class="add"></span>
-									</div>
+							</li>
+							<li>
+								<span>05</span>
+								<div class="right">
+									<h2>Fast delivery time</h2>
+									<p>
+										48 hours delivery to USA, Canada </br>
+										and Nigeria, 72 hours delivery to Europe, </br>
+										4 -5 working days to Africa countries.
+
+									</p>
 								</div>
-								<div class="close"></div>
-								<span class="wishlist">Move to Wishlist</span>
+							</li>
+							<li>
+								<span>06</span>
+								<div class="right">
+									<h2>
+										You can find us in all kinds of </br>
+										Beauty Show
+									</h2>
+									<p>
+										You can always find us in Atlanta Bronner  </br>
+										Bro beauty show, Miami Asia-America  </br>
+										Trade Show in USA every year. </br>
+									</p>
+								</div>
 							</li>
 						</ul>
-					</div>
-				
-					<div class="right">
-						<h2>SUMMARY</h2>
-						<p class="p1">Subtotal <span class="fr">$70.00</span></p>
-						<p class="p2">Total <span class="fr">$70.00</span></p>
-						<div class="shop_search">
-							<p>
-								If you have coupons, please fill them out. If not, 
-								please pay.
-							</p>
-							<label for="">
-								<input type="text" placeholder="coupon code"/>
-								<button>CONFIRM</button>
-							</label>
-						</div>
-						<div class="btn">
-							<a class="a_btn" href="###">GO TO CHECK OUT&nbsp;&nbsp;&nbsp;></a>
-						</div>
-					</div>
-				</div>
-				
-				<div class="bot clearfix">
-					<dl>
-						<dt>Delivery dates</dt>
-						<dd class="pc_dd">
-							We ship by FedEx, DHL express and local express.<br />
-							You can expect to get these items within <br />
-							5-7 days. <a href="###">More information&nbsp;&nbsp;>></a>
-						</dd>
-						<dd class="yd_dd">
-							Shopping on Hot Beauty Hair.com is safe and secure 
-							- guaranteed!
-						</dd>
 						
-					</dl>
-					<dl>
-						<dt>Satisfaction Guaranteed </dt>
-						<dd>
-							Hot Beauty Hair.com cares about your complete 
-							satisfaction. We offer a comprehensive return policy 
-							on all items, allowing you to shop with confidence.
-						</dd>
-					</dl>
-					<dl>
-						<dt>Privacy Policy</dt>
-						<dd class="pc_dd">
-							Hot Beauty Hair.com respects your privacy.<br />
-							We do NOT share or in any way distribute 
-							any personal, business or contact information 
-							you may provide. <a href="###">See Our Return Policy&nbsp;&nbsp;>></a>
-						</dd>
-						<dd class="yd_dd">
-							Hot Beauty Hair.com respects your privacy.We do NOT share 
-							or in any way distribute any personal, business or contact 
-							information you may provide.
-						</dd>
-					</dl>
+					</div>
+					
+					<div class="text_3 clearfix">
+						<div class="top">
+							<hr class="com_hr" />
+							<span class="com_span"><i>03</i></span>
+							<h1 class="com_h1">OUR MISSION</h1>
+						</div>
+						
+						<img class="fl" src="img/jpg/com_3.jpg" alt="" />
+						<div class="right">
+							<img src="img/png/bt1.png" alt="" />
+							<p>
+								Let customers from all over the world </br>
+								can enjoy the beauty and value from </br>
+								our services,</br>
+								so that all members of the company </br>
+								can enhance and achieve self-worth.</br>
+							</p>
+						</div>
+						
+					</div>
+					
+					<div class="text_4 clearfix">
+						<div class="top">
+							<hr class="com_hr" />
+							<span class="com_span"><i>04</i></span>
+							<h1 class="com_h1">HISTORY OF HOT BEAUTY</h1>
+						</div>
+						
+						<div class="yuan"></div>
+						
+						
+					</div>
+					
+					<div class="text_5 clearfix">
+						<div class="top">
+							<hr class="com_hr" />
+							<span class="com_span"><i>05</i></span>
+							<h1 class="com_h1">HOT BEAUTY HAIR TRADE SHOW</h1>
+						</div>
+						
+						<ul class="clearfix">
+							<li>
+								<img src="img/jpg/com_4.jpg" alt="" />
+								<p>Atlanta Bronner Bro beauty show</p>
+							</li>
+							<li>
+								<img src="img/jpg/com_5.jpg" alt="" />
+								<p>Miami Asia-America Trade Show</p>
+							</li>
+							<li>
+								<img src="img/jpg/com_6.jpg" alt="" />
+								<p>South Africa Trade Show</p>
+							</li>
+							<li>
+								<img src="img/jpg/com_7.jpg" alt="" />
+								<p>Nigeria Trade Show</p>
+							</li>
+						</ul>
+						
+					</div>
+					
+					<div class="text_6 clearfix">
+						<div class="top">
+							<hr class="com_hr" />
+							<span class="com_span"><i>06</i></span>
+							<h1 class="com_h1">WHO YOU ARE DEALING WITH</h1>
+						</div>
+						<p>Hot Beauty Hair Departments Introduction</p>
+						<div class="left clearfix">
+							<img src="img/jpg/com_8.jpg" alt="" />
+						</div>
+						<div class="right clearfix">
+							<ul class="clearfix">
+								<li><img src="img/jpg/com_9.jpg" alt="" /></li>
+								<li><img src="img/jpg/com_10.jpg" alt="" /></li>
+								<li><p>Sales Team</p></li>
+								<li><img src="img/jpg/com_11.jpg" alt="" /></li>
+							</ul>
+						</div>
+						
+					</div>
+					
+					<div class="text_7 clearfix">
+						<div class="top">
+							<hr class="com_hr" />
+							<span class="com_span"><i>07</i></span>
+							<h1 class="com_h1">GLORIES OF COMPANY</h1>
+						</div>
+						<img src="img/jpg/com_12.png" alt="" />
+						
+					</div>
 				</div>
-				
 			</div>
+		
 		</div>
+		
 		<!--返回顶部-->
 		<div class="xf_right">
 			<div class="vip"><a href="###"><span>VIP</span></a></div>
@@ -515,94 +595,3 @@
 	</body>
 </html>
 
-<script>
-	$(function(){
-		//全选
-		$(".qx_label input").click(function(){
-			if($(this).prop("checked")){
-				$(this).siblings(".check_i").addClass("active");
-				$(".dx_label input").each(function(){
-					$(this).prop("checked",true);
-					$(this).siblings(".check_i").addClass("active");
-				})
-			}else{
-				$(this).siblings(".check_i").removeClass("active");
-				$(".dx_label input").each(function(){
-					$(this).prop("checked","");
-					$(this).siblings(".check_i").removeClass("active");
-				})
-			}
-		})
-		//单选
-		$(".dx_label input").click(function(){
-			if($(this).prop("checked")){
-				$(this).siblings(".check_i").addClass("active");
-				var len = $(".dx_label .check_i").length;
-				var i=0;
-				$(".dx_label .check_i").each(function(){
-					if($(this).hasClass("active")){
-						i++
-					}
-					return i;
-				})
-				if(i>=len){
-					$(".qx_label input").prop("checked",true);
-					$(".qx_label .check_i").addClass("active");
-				}
-				
-			}else{
-				$(this).siblings(".check_i").removeClass("active");
-				$(".qx_label .check_i").removeClass("active");
-				$(".qx_label input").prop("checked","");
-			}
-		})
-		
-		//		数量
-		$(".sub").click(function(){
-			var num  = $(this).siblings(".num").val();
-			if(num>1){
-				num--;
-				 $(this).siblings(".num").val(num);
-			}
-		})
-		$(".add").click(function(){
-			var num  = $(this).siblings(".num").val();
-			num++;
-			 $(this).siblings(".num").val(num);
-		})
-		
-		//收藏
-		$(".wishlist").click(function(){
-			var win = $(window).width();
-			if(win>992){
-				if($(this).hasClass("off")){
-					$(this).removeClass("off");
-					$(this).css("background","url(img/png/shop_star.png) no-repeat left center").css("background-size","0.83vw 0.83vw").css("color","#666");
-				}else{
-					$(this).addClass("off");
-					$(this).css("background","url(img/png/shop_star_.png) no-repeat left center").css("background-size","0.83vw 0.83vw").css("color","#d5af74");
-				}
-			}else{
-				if($(this).hasClass("off")){
-					$(this).removeClass("off");
-					$(this).css("background","url(img/png/shop_star.png) no-repeat left center").css("background-size","0.16rem 0.16rem").css("color","#666");
-				}else{
-					$(this).addClass("off");
-					$(this).css("background","url(img/png/shop_star_.png) no-repeat left center").css("background-size","0.16rem 0.16rem").css("color","#d5af74");
-				}
-			}
-			
-		})
-		
-		//删除
-		$(".shopcart2 .close").click(function(){
-			$(this).parents("li").remove();
-		})
-		
-		//搜索
-		$(".shop_search input").focus(function(){
-			$(".shop_search button").css("display","block");
-		})
-	})
-</script>
-		
