--- a/catalog/view/theme/default/paytype.html
+++ b/catalog/view/theme/default/paytype.html
@@ -214,13 +214,13 @@
 							<img src="img/png/express.png" alt="" />
 							<span style="background: #d5af74;border: 1px solid #d5af74;"></span>
 							<p>1.Shipping</p>
-							<em style="border: 1px solid #d5af74;width: 46%;margin: 0;" class="emr"></em>
+							<em style="border-top: 1px solid #d5af74;width: 46%;margin: 0;" class="emr"></em>
 						</li>
 						<li class="active">
 							<img src="img/png/express.png" alt="" />
 							<span></span>
 							<p>2.Payment</p>
-							<em style="border: 1px solid #d5af74;width: 46%;margin: 0;" class="eml"></em>
+							<em style="border-top: 1px solid #d5af74;width: 46%;margin: 0;" class="eml"></em>
 							<em class="emr"></em>
 						</li>
 						<li>
@@ -232,14 +232,14 @@
 					</ol>
 					
 					<div class="text clearfix">
-						<h2>Select the shipping address</h2>
+						<h2>Select a payment method</h2>
 						
 						<ol class="pay_ol">
+							<p class="ts">Click “save and continue” to make paypal payments</p>
+							<p class="jg"><span>i</span>Please choose the payment method</p>
 							<li class="clearfix">
 								<input class="pay_dx" type="radio" />
 								<img src="img/jpg/pay1.jpg"/>
-								<p class="ts">Click “save and continue” to make paypal payments</p>
-								<p class="jg"><span>i</span>Please choose the payment method</p>
 							</li>
 							<li class="clearfix">
 								<input class="pay_dx" type="radio" />
