--- a/catalog/view/theme/default/product_details.html
+++ b/catalog/view/theme/default/product_details.html
@@ -219,7 +219,7 @@
 							<li><img src="img/jpg/product1.jpg"/></li>
 							<li><img src="img/jpg/pro_det1.jpg"/></li>
 							<li><img src="img/jpg/pro_det1.jpg"/></li>
-							<li><img src="img/jpg/pro_det1.jpg"/></li>
+							<li><img src="img/jpg/product1.jpg"/></li>
 						</ol>
 						<div class="pro_big_img">
 							<div class="swiper-container"id="swiper3">
@@ -264,32 +264,34 @@
 								<label class="len_label" for="">
 									<span>Length:</span>
 									<div class="select_div">
-										<button class="select_btn"><span>12in  100g  1pc</span></button>
+										<button class="select_btn"><span>12inch  100g</span></button>
 										<div class="select_ul">
 											<ul>
-												<li>12in  100g  1pc</li>
-												<li>14in  100g  1pc</li>
-												<li>16in  100g  1pc</li>
-												<li>18in  100g  1pc</li>
-												<li>20in  100g  1pc</li>
-												<li>22in  100g  1pc</li>
-												<li>24in  100g  1pc</li>
-												<li>26in  100g  1pc</li>
-												<li>28in  100g  1pc</li>
-												<li>30in  100g  1pc</li>
+												<li>12inch  100g</li>
+												<li>14inch  100g</li>
+												<li>16inch  100g</li>
+												<li>18inch  100g</li>
+												<li>20inch  100g</li>
+												<li>22inch  100g</li>
+												<li>24inch  100g</li>
+												<li>26inch  100g</li>
+												<li>28inch  100g</li>
+												<li>30inch  100g</li>
 											</ul>
 										</div>
 									</div>
 									<ul style="display: none;" class="clearfix">
-										<li class="active">12in 100g 1pc</li>
-										<li>12in 100g 1pc</li>
-										<li>12in 100g 1pc</li>
-										<li>12in 100g 1pc</li>
-										<li>12in 100g 1pc</li>
-										<li>12in 100g 1pc</li>
-										<li>12in 100g 1pc</li>
-										<li>12in 100g 1pc</li>
-										<li>12in 100g 1pc</li>
+										<li class="active">12inch 100g</li>
+										<li>12inch  100g</li>
+										<li>14inch  100g</li>
+										<li>16inch  100g</li>
+										<li>18inch  100g</li>
+										<li>20inch  100g</li>
+										<li>22inch  100g</li>
+										<li>24inch  100g</li>
+										<li>26inch  100g</li>
+										<li>28inch  100g</li>
+										<li>30inch  100g</li>
 									</ul>
 									
 								</label>
