--- a/catalog/view/theme/default/my_order_null.html
+++ b/catalog/view/theme/default/my_order_null.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="css/index.css" />
 		<script type="text/javascript" src="js/jquery.min.js" ></script>
 		<script type="text/javascript" src="js/common.js" ></script>
-		<title>SHOPCART2</title>
+		<title>Personal Center</title>
 	</head>
 	<body>
 		<!--头部-->
@@ -205,138 +205,36 @@
 		
 		</div>
 		<!--内容-->
-		<div class="shopcart2 clearfix">
-			<div class="content in_content shop2_content clearfix">
-				<div class="top clearfix">
-					<h1>SHOPPING CART</h1>
-					<a href="###">Continue Shopping</a>
+		<div class=" in_content peo_center">
+			<div class="content clearfix">
+				
+				<div class="left clearfix">
+					<h1>MY ACCOUNT</h1>
+					<ol>
+						<li><a href="###">My Orders</a></li>
+						<li class="active"><a href="###">Account Information</a></li>
+						<li><a href="###">Address List</a></li>
+						<li><a href="###">My Wish List</a></li>
+						<li><a href="###">My VIP</a></li>
+						<li><a href="###">My Coupon</a></li>
+						<li><a href="###">Help Center</a></li>
+						<li><a href="###">Logout </a></li>
+					</ol>
 				</div>
 				
-				<div class="shop2_text clearfix">
-					<div class="left">
-						<label for="" class="qx_label">
-							<span>ALL</span>
-							<input class="check_input" type="checkbox" />
-							<i class="check_i"></i>
-						</label>
-						<ul class="shop2_ul">
-							<li class="clearfix">
-								<label for="" class="dx_label">
-									<input class="check_input"  type="checkbox" />
-									<i class="check_i"></i>
-								</label>
-								<div class="pic_img">
-									<a href="###"><img src="img/jpg/pro_det1.jpg" alt="" /></a>
-								</div>
-								<div class="text">
-									<a class="a_bt" href="###">Fuller Peruvian Virgin Hair  Body Wavy   </a>
-									<p><span>Color:</span> Natural Black</p>
-									<p><span>Length:</span> 12inch</p>
-									<p><span>Commodity code:</span> xhs00245</p>
-								</div>
-								<div class="price clearfix">
-									<p>$35.65<span>$35.65</span></p>
-								</div>
-								<div class="pre_div">
-									<div class="num_div">
-										<span class="sub"></span>
-										<input class="num" type="text" value="1" />
-										<span class="add"></span>
-									</div>
-								</div>
-								<div class="close"></div>
-								<span class="wishlist">Move to Wishlist</span>
-							</li>
-							<li class="clearfix">
-								<label for="" class="dx_label">
-									<input class="check_input"  type="checkbox" />
-									<i class="check_i"></i>
-								</label>
-								<div class="pic_img">
-									<a href="###"><img src="img/jpg/pro_det1.jpg" alt="" /></a>
-								</div>
-								<div class="text">
-									<a class="a_bt" href="###">Fuller Peruvian Virgin Hair  Body Wavy   </a>
-									<p><span>Color:</span> Natural Black</p>
-									<p><span>Length:</span> 12inch</p>
-									<p><span>Commodity code:</span> xhs00245</p>
-								</div>
-								<div class="price clearfix">
-									<p>$35.65<span>$35.65</span></p>
-								</div>
-								<div class="pre_div">
-									<div class="num_div">
-										<span class="sub"></span>
-										<input class="num" type="text" value="1" />
-										<span class="add"></span>
-									</div>
-								</div>
-								<div class="close"></div>
-								<span class="wishlist">Move to Wishlist</span>
-							</li>
-						</ul>
-					</div>
-				
-					<div class="right">
-						<h2>SUMMARY</h2>
-						<p class="p1">Subtotal <span class="fr">$70.00</span></p>
-						<p class="p2">Total <span class="fr">$70.00</span></p>
-						<div class="shop_search">
-							<p>
-								If you have coupons, please fill them out. If not, 
-								please pay.
-							</p>
-							<label for="">
-								<input type="text" placeholder="coupon code"/>
-								<button>CONFIRM</button>
-							</label>
-						</div>
-						<div class="btn">
-							<a class="a_btn" href="###">GO TO CHECK OUT&nbsp;&nbsp;&nbsp;></a>
-						</div>
-					</div>
-				</div>
-				
-				<div class="bot clearfix">
-					<dl>
-						<dt>Delivery dates</dt>
-						<dd class="pc_dd">
-							We ship by FedEx, DHL express and local express.<br />
-							You can expect to get these items within <br />
-							5-7 days. <a href="###">More information&nbsp;&nbsp;>></a>
-						</dd>
-						<dd class="yd_dd">
-							Shopping on Hot Beauty Hair.com is safe and secure 
-							- guaranteed!
-						</dd>
-						
-					</dl>
-					<dl>
-						<dt>Satisfaction Guaranteed </dt>
-						<dd>
-							Hot Beauty Hair.com cares about your complete 
-							satisfaction. We offer a comprehensive return policy 
-							on all items, allowing you to shop with confidence.
-						</dd>
-					</dl>
-					<dl>
-						<dt>Privacy Policy</dt>
-						<dd class="pc_dd">
-							Hot Beauty Hair.com respects your privacy.<br />
-							We do NOT share or in any way distribute 
-							any personal, business or contact information 
-							you may provide. <a href="###">See Our Return Policy&nbsp;&nbsp;>></a>
-						</dd>
-						<dd class="yd_dd">
-							Hot Beauty Hair.com respects your privacy.We do NOT share 
-							or in any way distribute any personal, business or contact 
-							information you may provide.
-						</dd>
-					</dl>
+				<div class="right m_account clearfix">
+					
+					<img src="img/png/order.png"/>
+					<p> You have placed no orders</p>
+					<a class="a_btn" href="###">GO SHOPPING &nbsp;&nbsp;&nbsp;></a>
+					
 				</div>
 				
 			</div>
+			
+			
 		</div>
+		
 		<!--返回顶部-->
 		<div class="xf_right">
 			<div class="vip"><a href="###"><span>VIP</span></a></div>
@@ -515,94 +413,3 @@
 	</body>
 </html>
 
-<script>
-	$(function(){
-		//全选
-		$(".qx_label input").click(function(){
-			if($(this).prop("checked")){
-				$(this).siblings(".check_i").addClass("active");
-				$(".dx_label input").each(function(){
-					$(this).prop("checked",true);
-					$(this).siblings(".check_i").addClass("active");
-				})
-			}else{
-				$(this).siblings(".check_i").removeClass("active");
-				$(".dx_label input").each(function(){
-					$(this).prop("checked","");
-					$(this).siblings(".check_i").removeClass("active");
-				})
-			}
-		})
-		//单选
-		$(".dx_label input").click(function(){
-			if($(this).prop("checked")){
-				$(this).siblings(".check_i").addClass("active");
-				var len = $(".dx_label .check_i").length;
-				var i=0;
-				$(".dx_label .check_i").each(function(){
-					if($(this).hasClass("active")){
-						i++
-					}
-					return i;
-				})
-				if(i>=len){
-					$(".qx_label input").prop("checked",true);
-					$(".qx_label .check_i").addClass("active");
-				}
-				
-			}else{
-				$(this).siblings(".check_i").removeClass("active");
-				$(".qx_label .check_i").removeClass("active");
-				$(".qx_label input").prop("checked","");
-			}
-		})
-		
-		//		数量
-		$(".sub").click(function(){
-			var num  = $(this).siblings(".num").val();
-			if(num>1){
-				num--;
-				 $(this).siblings(".num").val(num);
-			}
-		})
-		$(".add").click(function(){
-			var num  = $(this).siblings(".num").val();
-			num++;
-			 $(this).siblings(".num").val(num);
-		})
-		
-		//收藏
-		$(".wishlist").click(function(){
-			var win = $(window).width();
-			if(win>992){
-				if($(this).hasClass("off")){
-					$(this).removeClass("off");
-					$(this).css("background","url(img/png/shop_star.png) no-repeat left center").css("background-size","0.83vw 0.83vw").css("color","#666");
-				}else{
-					$(this).addClass("off");
-					$(this).css("background","url(img/png/shop_star_.png) no-repeat left center").css("background-size","0.83vw 0.83vw").css("color","#d5af74");
-				}
-			}else{
-				if($(this).hasClass("off")){
-					$(this).removeClass("off");
-					$(this).css("background","url(img/png/shop_star.png) no-repeat left center").css("background-size","0.16rem 0.16rem").css("color","#666");
-				}else{
-					$(this).addClass("off");
-					$(this).css("background","url(img/png/shop_star_.png) no-repeat left center").css("background-size","0.16rem 0.16rem").css("color","#d5af74");
-				}
-			}
-			
-		})
-		
-		//删除
-		$(".shopcart2 .close").click(function(){
-			$(this).parents("li").remove();
-		})
-		
-		//搜索
-		$(".shop_search input").focus(function(){
-			$(".shop_search button").css("display","block");
-		})
-	})
-</script>
-		
