--- a/catalog/view/theme/default/shopcart1.html
+++ b/catalog/view/theme/default/shopcart1.html
@@ -226,19 +226,19 @@
 							</a>
 							<div class="close"></div>
 							<div class="select_div">
-								<button class="select_btn"><span>12in  100g  1pc</span></button>
+								<button class="select_btn"><span>12inch  100g</span></button>
 								<div class="select_ul">
 									<ul>
-										<li>12in  100g  1pc</li>
-										<li>14in  100g  1pc</li>
-										<li>16in  100g  1pc</li>
-										<li>18in  100g  1pc</li>
-										<li>20in  100g  1pc</li>
-										<li>22in  100g  1pc</li>
-										<li>24in  100g  1pc</li>
-										<li>26in  100g  1pc</li>
-										<li>28in  100g  1pc</li>
-										<li>30in  100g  1pc</li>
+										<li>12inch  100g</li>
+										<li>14inch  100g</li>
+										<li>16inch  100g</li>
+										<li>18inch  100g</li>
+										<li>20inch  100g</li>
+										<li>22inch  100g</li>
+										<li>24inch  100g</li>
+										<li>26inch  100g</li>
+										<li>28inch  100g</li>
+										<li>30inch  100g</li>
 									</ul>
 								</div>
 							</div>
@@ -259,19 +259,19 @@
 							</a>
 							<div class="close"></div>
 							<div class="select_div">
-								<button class="select_btn"><span>12in  100g  1pc</span></button>
+								<button class="select_btn"><span>12inch  100g</span></button>
 								<div class="select_ul">
 									<ul>
-										<li>12in  100g  1pc</li>
-										<li>14in  100g  1pc</li>
-										<li>16in  100g  1pc</li>
-										<li>18in  100g  1pc</li>
-										<li>20in  100g  1pc</li>
-										<li>22in  100g  1pc</li>
-										<li>24in  100g  1pc</li>
-										<li>26in  100g  1pc</li>
-										<li>28in  100g  1pc</li>
-										<li>30in  100g  1pc</li>
+										<li>12inch  100g</li>
+										<li>14inch  100g</li>
+										<li>16inch  100g</li>
+										<li>18inch  100g</li>
+										<li>20inch  100g</li>
+										<li>22inch  100g</li>
+										<li>24inch  100g</li>
+										<li>26inch  100g</li>
+										<li>28inch  100g</li>
+										<li>30inch  100g</li>
 									</ul>
 								</div>
 							</div>
@@ -292,19 +292,19 @@
 							</a>
 							<div class="close"></div>
 							<div class="select_div">
-								<button class="select_btn"><span>12in  100g  1pc</span></button>
+								<button class="select_btn"><span>12inch  100g</span></button>
 								<div class="select_ul">
 									<ul>
-										<li>12in  100g  1pc</li>
-										<li>14in  100g  1pc</li>
-										<li>16in  100g  1pc</li>
-										<li>18in  100g  1pc</li>
-										<li>20in  100g  1pc</li>
-										<li>22in  100g  1pc</li>
-										<li>24in  100g  1pc</li>
-										<li>26in  100g  1pc</li>
-										<li>28in  100g  1pc</li>
-										<li>30in  100g  1pc</li>
+										<li>12inch  100g</li>
+										<li>14inch  100g</li>
+										<li>16inch  100g</li>
+										<li>18inch  100g</li>
+										<li>20inch  100g</li>
+										<li>22inch  100g</li>
+										<li>24inch  100g</li>
+										<li>26inch  100g</li>
+										<li>28inch  100g</li>
+										<li>30inch  100g</li>
 									</ul>
 								</div>
 							</div>
@@ -325,19 +325,19 @@
 							</a>
 							<div class="close"></div>
 							<div class="select_div">
-								<button class="select_btn"><span>12in  100g  1pc</span></button>
+								<button class="select_btn"><span>12inch  100g</span></button>
 								<div class="select_ul">
 									<ul>
-										<li>12in  100g  1pc</li>
-										<li>14in  100g  1pc</li>
-										<li>16in  100g  1pc</li>
-										<li>18in  100g  1pc</li>
-										<li>20in  100g  1pc</li>
-										<li>22in  100g  1pc</li>
-										<li>24in  100g  1pc</li>
-										<li>26in  100g  1pc</li>
-										<li>28in  100g  1pc</li>
-										<li>30in  100g  1pc</li>
+										<li>12inch  100g</li>
+										<li>14inch  100g</li>
+										<li>16inch  100g</li>
+										<li>18inch  100g</li>
+										<li>20inch  100g</li>
+										<li>22inch  100g</li>
+										<li>24inch  100g</li>
+										<li>26inch  100g</li>
+										<li>28inch  100g</li>
+										<li>30inch  100g</li>
 									</ul>
 								</div>
 							</div>
@@ -358,19 +358,19 @@
 							</a>
 							<div class="close"></div>
 							<div class="select_div">
-								<button class="select_btn"><span>12in  100g  1pc</span></button>
+								<button class="select_btn"><span>12inch  100g</span></button>
 								<div class="select_ul">
 									<ul>
-										<li>12in  100g  1pc</li>
-										<li>14in  100g  1pc</li>
-										<li>16in  100g  1pc</li>
-										<li>18in  100g  1pc</li>
-										<li>20in  100g  1pc</li>
-										<li>22in  100g  1pc</li>
-										<li>24in  100g  1pc</li>
-										<li>26in  100g  1pc</li>
-										<li>28in  100g  1pc</li>
-										<li>30in  100g  1pc</li>
+										<li>12inch  100g</li>
+										<li>14inch  100g</li>
+										<li>16inch  100g</li>
+										<li>18inch  100g</li>
+										<li>20inch  100g</li>
+										<li>22inch  100g</li>
+										<li>24inch  100g</li>
+										<li>26inch  100g</li>
+										<li>28inch  100g</li>
+										<li>30inch  100g</li>
 									</ul>
 								</div>
 							</div>
@@ -391,19 +391,19 @@
 							</a>
 							<div class="close"></div>
 							<div class="select_div">
-								<button class="select_btn"><span>12in  100g  1pc</span></button>
+								<button class="select_btn"><span>12inch  100g</span></button>
 								<div class="select_ul">
 									<ul>
-										<li>12in  100g  1pc</li>
-										<li>14in  100g  1pc</li>
-										<li>16in  100g  1pc</li>
-										<li>18in  100g  1pc</li>
-										<li>20in  100g  1pc</li>
-										<li>22in  100g  1pc</li>
-										<li>24in  100g  1pc</li>
-										<li>26in  100g  1pc</li>
-										<li>28in  100g  1pc</li>
-										<li>30in  100g  1pc</li>
+										<li>12inch  100g</li>
+										<li>14inch  100g</li>
+										<li>16inch  100g</li>
+										<li>18inch  100g</li>
+										<li>20inch  100g</li>
+										<li>22inch  100g</li>
+										<li>24inch  100g</li>
+										<li>26inch  100g</li>
+										<li>28inch  100g</li>
+										<li>30inch  100g</li>
 									</ul>
 								</div>
 							</div>
@@ -424,19 +424,19 @@
 							</a>
 							<div class="close"></div>
 							<div class="select_div">
-								<button class="select_btn"><span>12in  100g  1pc</span></button>
+								<button class="select_btn"><span>12inch  100g</span></button>
 								<div class="select_ul">
 									<ul>
-										<li>12in  100g  1pc</li>
-										<li>14in  100g  1pc</li>
-										<li>16in  100g  1pc</li>
-										<li>18in  100g  1pc</li>
-										<li>20in  100g  1pc</li>
-										<li>22in  100g  1pc</li>
-										<li>24in  100g  1pc</li>
-										<li>26in  100g  1pc</li>
-										<li>28in  100g  1pc</li>
-										<li>30in  100g  1pc</li>
+										<li>12inch  100g</li>
+										<li>14inch  100g</li>
+										<li>16inch  100g</li>
+										<li>18inch  100g</li>
+										<li>20inch  100g</li>
+										<li>22inch  100g</li>
+										<li>24inch  100g</li>
+										<li>26inch  100g</li>
+										<li>28inch  100g</li>
+										<li>30inch  100g</li>
 									</ul>
 								</div>
 							</div>
@@ -457,19 +457,19 @@
 							</a>
 							<div class="close"></div>
 							<div class="select_div">
-								<button class="select_btn"><span>12in  100g  1pc</span></button>
+								<button class="select_btn"><span>12inch  100g</span></button>
 								<div class="select_ul">
 									<ul>
-										<li>12in  100g  1pc</li>
-										<li>14in  100g  1pc</li>
-										<li>16in  100g  1pc</li>
-										<li>18in  100g  1pc</li>
-										<li>20in  100g  1pc</li>
-										<li>22in  100g  1pc</li>
-										<li>24in  100g  1pc</li>
-										<li>26in  100g  1pc</li>
-										<li>28in  100g  1pc</li>
-										<li>30in  100g  1pc</li>
+										<li>12inch  100g</li>
+										<li>14inch  100g</li>
+										<li>16inch  100g</li>
+										<li>18inch  100g</li>
+										<li>20inch  100g</li>
+										<li>22inch  100g</li>
+										<li>24inch  100g</li>
+										<li>26inch  100g</li>
+										<li>28inch  100g</li>
+										<li>30inch  100g</li>
 									</ul>
 								</div>
 							</div>
